# ghstat

./: README.md  pyproject.toml
ghstat/: __init__.py  analytics.py  api.py  cli.py  display.py
