[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghstat"
version = "0.1.0"
description = "Analyze any GitHub profile from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pavan Kumar Dhruv", email = "pavankumardhruv@gmail.com" },
]
keywords = ["github", "analytics", "cli", "developer-tools", "profile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ghstat = "ghstat.cli:app"

[project.urls]
Homepage = "https://github.com/Pavankumardhruv/ghstat"
Repository = "https://github.com/Pavankumardhruv/ghstat"
Issues = "https://github.com/Pavankumardhruv/ghstat/issues"
